My_Blog_Final_Edit.html

--- a/My_Blog_Final_Edit.html
+++ b/My_Blog_Final_Edit.html
@@ -337,15 +337,27 @@
     </footer>
     
     <script>
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+       // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBM8aygKHSYYf3pydtKdbZJD4RtSlY0KiM",
+  authDomain: "surrah-c.firebaseapp.com",
+  projectId: "surrah-c",
+  storageBucket: "surrah-c.firebasestorage.app",
+  messagingSenderId: "1046437840679",
+  appId: "1:1046437840679:web:23881bc69ee796f1934b02",
+  measurementId: "G-PPFEMWTHEX"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
