--- a/My_Blog_Final_Edit.html
+++ b/My_Blog_Final_Edit.html
@@ -683,6 +683,17 @@
             `;
             return input;
         }
+
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBM8aygKHSYYf3pydtKdbZJD4RtSlY0KiM",
+  authDomain: "surrah-c.firebaseapp.com",
+  projectId: "surrah-c",
+  storageBucket: "surrah-c.firebasestorage.app",
+  messagingSenderId: "1046437840679",
+  appId: "1:1046437840679:web:23881bc69ee796f1934b02",
+  measurementId: "G-PPFEMWTHEX"
+};
     </script>
 </body>
 </html>
