About_My_Story.html

--- a/About_My_Story.html
+++ b/About_My_Story.html
@@ -360,7 +360,8 @@
             <div class="content-box">
                 <p>I was born in January 1997 in a quiet rural area surrounded by the simplicity and beauty of nature. Raised in a middle-income family, I learned early on the value of hard work, resourcefulness, and gratitude. We didn't have extravagant luxuries, but there was always enough to meet our needs, and my parents worked tirelessly to provide opportunities for me and my siblings.</p>
                 <p>The countryside gave me fresh air, open fields, and a close community of people looking after one another. These experiences have shaped my perspective, instilling in me a strong sense of resilience and deep appreciation for both my roots and the possibilities that lay beyond them.</p>
-                <p>My childhood was very colorful from 2002 to 2010, and I was involved in several outdoor games with peers in the neighborhood. We used to fly kites of different colors for hours, play cricket with our souls, and laugh adversely while playing Blind Man's Buff.</p>
+                <p>My childhood was very colorful from 2002 to 2010, and I was involved in several outdoor games with peers in the neighborhood. We used to fly kites of different colors for hours, play cricket with our souls, and laugh adversely while playing Blind Man's Buff.</p> 
+                <p>I have two siblings, an elder sister and a younger brother. My sister has always been very supportive, being deeply caring with regard to my attitude. Our mother, Ferdous Ara Chowdhury , used to be a head teacher at a primary school, and therefore, she could hardly give us sufficient time due to her busy schedule. My elder sister, however, fit in effortlessly and turned out to be a companion of fun and a guide in our free time. She played with us, kept us company, and soothed us, thereby making our childhood warm and unforgettable. Her nurturing nature and selflessness have always made me feel loved and protected. </p>
             </div>
         </div>
     </section>
@@ -371,7 +372,10 @@
             <div class="content-box">
                 <p>From 2011 to 2015, I became a much more responsible, punctual, and honest man in all aspects of my life. This was the time for the growth of my personality when I started exploring my town and city and hence developing my horizons of thinking.</p>
                 <p>As I grew up, I started taking up more responsibilities and rose to support my family in several aspects. Be it household chores, helping my siblings, or putting in one's views in family decisions, I did it all with a lot of duty and commitment.</p>
-                <p>During this phase, I involved myself in all kinds of passionate activities that included painting and sketching, which allowed me to express my creativity in ways that I had never imagined.</p>
+                <p>These years made me more responsible and dependable-a better person to take on greater challenges and make the most of emerging opportunities. </p>
+                <p>I made many friends during this time and created quite a few acquaintance networks, adding much variety in my circle. Be it at school, some community gathering, or any random meeting, I never let an opportunity slip by to make more friends. It is these friendships that colored my life and taught me the ways of empathy, team spirit, and harmony. The expansion of my communication chain enabled me to learn from others, share experiences, and build a supportive circle that inspires and motivates me even to this day. </p>
+                <p>During this phase, I involved myself in all kinds of passionate activities that included painting and sketching, which allowed me to express my creativity in ways that I had never imagined. While exploring these artistic outlets, I started finding hidden talents and a deeper understanding of myself. This journey of exploration introduced me to my own longings and aspirations, helping me connect with my true passions and interests.</p>
+                
             </div>
         </div>
     </section>
