Conceptual_Work_FiFaWorldcupLOGo2026.html

--- a/Conceptual_Work_FiFaWorldcupLOGo2026.html
+++ b/Conceptual_Work_FiFaWorldcupLOGo2026.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conceptual Work by SamadTerra</title>
-  <link rel="icon" type="image/png" href="WEB_PORTPOLIO/WEBPAGE_LOGO_SURRAH-02.png">
+  <link rel="icon" type="Image/png" href="WEB_PORTPOLIO/WEBPAGE_LOGO_SURRAH-02.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @font-face {
@@ -311,7 +311,7 @@
     <section id="two">
         <div class="content-wrapper">
             <div class="image-container fade-in">
-                <img src="image/1-01.png" alt="Conceptual Design 1">
+                <img src="Image/1-01.png" alt="Conceptual Design 1">
             </div>
             <div class="text-container">
                 <p class="visible">
@@ -326,7 +326,7 @@
     <section id="three">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2026-01.png" alt="Conceptual Design 2">
+                <img src="Image/2026-01.png" alt="Conceptual Design 2">
             </div>
             <div class="text-container">
                 <p>
@@ -340,7 +340,7 @@
     <section id="four">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2-01-01-01.png" alt="Conceptual Design 3">
+                <img src="Image/2-01-01-01.png" alt="Conceptual Design 3">
             </div>
             <div class="text-container">
                 <p>
@@ -355,7 +355,7 @@
     <section id="five">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2-01-01-01-01.png" alt="Conceptual Design 4">
+                <img src="Image/2-01-01-01-01.png" alt="Conceptual Design 4">
             </div>
             <div class="text-container">
                 <p>
@@ -369,7 +369,7 @@
     <section id="six">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2026-01-01.png" alt="Conceptual Design 5">
+                <img src="Image/2026-01-01.png" alt="Conceptual Design 5">
             </div>
             <div class="text-container">
                 <p>
@@ -383,7 +383,7 @@
     <section id="seven">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2026-01-01-01.png" alt="Conceptual Design 6">
+                <img src="Image/2026-01-01-01.png" alt="Conceptual Design 6">
             </div>
             <div class="text-container">
                 <p>
@@ -397,7 +397,7 @@
     <section id="eight">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2026-01-01-01-01.png" alt="Conceptual Design 7">
+                <img src="Image/2026-01-01-01-01.png" alt="Conceptual Design 7">
             </div>
             <div class="text-container">
                 <p>
@@ -411,7 +411,7 @@
     <section id="nine">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/2-01-01-01-01-01-01.png" alt="Conceptual Design 8">
+                <img src="Image/2-01-01-01-01-01-01.png" alt="Conceptual Design 8">
             </div>
             <div class="text-container">
                 <p>
@@ -426,7 +426,7 @@
     <section id="ten">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="image/Untitled-2-01-92-01-21-01.png" alt="Conceptual Design 9">
+                <img src="Image/Untitled-2-01-92-01-21-01.png" alt="Conceptual Design 9">
             </div>
             <div class="text-container">
                 <p>
