--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
       <a href="#hero">Home</a>
       <a href="Full_CV_Final.html">About</a>
       <a href="Explanation_of_my_Vision.html">Vision</a>
+      <a href="My_activities_role.html">Activities</a>
       <a href="Gallery_present.html">Gallery</a>
       <a href="My_Blog_Final_Edit.html">Blog</a>
       <a href="My_Blog_My_Views.html">Share the thought</a>
