My_Font_Collection.html

--- a/My_Font_Collection.html
+++ b/My_Font_Collection.html
@@ -279,7 +279,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Type Foundry</h1>
+            <h1> Surrah Type Foundry</h1>
             <p class="tagline">Showcasing original typeface designs with precision and personality</p>
         </div>
     </header>
