Project_Views.html

--- a/Project_Views.html
+++ b/Project_Views.html
@@ -451,8 +451,8 @@
                       ">
                     </div>
                     <div class="design-info">
-                        <h3>Historical Tribute</h3>
-                        <p>Three-part design showcasing vintage football elements</p>
+                        <h3>Surrah Type Foundry</h3>
+                        <p>Surrah Type Foundry is a pioneering typography studio dedicated to crafting original, culturally and script typefaces. Unlike traditional foundries that merely distribute fonts, Surrah focuses on custom type design, blending traditional calligraphic aesthetics with contemporary functionality.</p>
                     <a href="My_Font_Collection.html" class="venture-link">Discover</a>
                     </div>
                 </div>
