--- a/index.html
+++ b/index.html
@@ -494,6 +494,9 @@
       #contact input, #contact textarea {
         padding: 10px;
       }
+      #contact input, .projects-grid, button, a {
+        color: white;
+      }
     }
   </style>
 </head>
