--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
       #contact input, #contact textarea {
         padding: 10px;
       }
-      #contact input, .projects-grid, button, a {
+      #projects, button, a {
         color: white;
       }
     }
