--- a/index.html
+++ b/index.html
@@ -491,10 +491,10 @@
         grid-template-columns: 1fr;
       }
 
-      #contact input, #contact textarea {
+      #contact input #contact textarea {
         padding: 10px;
       }
-      #projects, button, a {
+      #projects button a {
         color: white;
       }
     }
